Fix backface visibility

--- a/css/style.css
+++ b/css/style.css
@@ -297,6 +297,12 @@ h1,h2 {
   transform: scale(1.05);
 
   cursor:pointer;
+
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -o-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 .carousel-options {
